apps/headlamp/base/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
  - name: headlamp
    hostname: headlamp.seigra.net
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: headlamp-gateway-tls
      mode: Terminate
