apps/headlamp/base/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames:
  - headlamp.seigra.net
  parentRefs:
  - name: headlamp
  rules:
  - backendRefs:
    - name: headlamp
      port: 80
    matches:
    - path:
        value: /
